# rs-lending-xlm

./: .actrc  .gitignore  .mintignore  ACTION_PLAN.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  GOAL.md  INVARIANTS.md  LICENSE  Makefile  README.md  SCF_BUILD_ARCHITECTURE.md  SECURITY.md  STRIDE.md  VECTOR.md  bugs.md  docs.json  index.mdx  oracle-threat-model.md  rust-toolchain.toml
common/: Cargo.toml
common/src/: constants.rs  errors.rs  events.rs  fp.rs  fp_core.rs  lib.rs  rates.rs  types.rs  validation.rs
common/src/constants/: controller.rs  mod.rs  oracle.rs  pool.rs  shared.rs
common/src/math/: fp.rs  fp_core.rs  mod.rs
common/src/oracle/: mod.rs  observation.rs
common/src/types/: aggregator.rs  controller.rs  mod.rs  oracle.rs  pool.rs  shared.rs
common/tests/: constants.rs  rates.rs  validation.rs  zz_storage_sizing.rs
common/tests/math/: fp.rs  fp_core.rs
common/tests/oracle/: observation.rs
common/tests/types/: pool.rs
contracts/aggregator/: Cargo.toml  README.md
contracts/aggregator/src/: errors.rs  lib.rs  test.rs  types.rs  vault.rs
contracts/controller/: Cargo.toml  README.md
contracts/controller/src/: abi.rs  access.rs  config.rs  constants.rs  emode.rs  events.rs  flash_loan.rs  lib.rs  router.rs  spoke.rs  strategy.rs  utils.rs  validation.rs
contracts/controller/tests/: emode.rs  events.rs  spoke.rs  test_support.rs  validation.rs
contracts/defindex-strategy/: Cargo.toml  README.md
contracts/defindex-strategy/src/: lib.rs
contracts/defindex-strategy/tests/: strategy.rs
contracts/governance/: Cargo.toml  README.md
contracts/governance/src/: access.rs  constants.rs  deploy.rs  events.rs  forward.rs  lib.rs  op.rs  self_timelock.rs  storage.rs  tests.rs  timelock.rs
contracts/governance/tests/: access.rs  flows.rs  op.rs  self_timelock.rs  storage.rs  support.rs  timelock.rs
contracts/pool/: Cargo.toml  README.md
contracts/pool/src/: abi.rs  cache.rs  events.rs  interest.rs  lib.rs  test_support.rs  tests.rs  utils.rs  views.rs
contracts/pool/tests/: cache.rs  flows.rs  interest.rs  lib_orchestration.rs  test_support.rs  utils.rs  views.rs
contracts/price-aggregator/: Cargo.toml  README.md
contracts/price-aggregator/src/: compose.rs  config.rs  context.rs  events.rs  lib.rs  observation.rs  prefetch.rs  price.rs  status.rs  storage.rs  tolerance.rs
contracts/price-aggregator/tests/: surface.rs
controller/: Cargo.toml  certora_build.py
controller/certora/: HANDOFF.md  SPIKES.md  check_orphans.py
controller/certora/results/: submission-20260416-132248.md  submission-20260416-132312.md  submission-20260416-133959-v2.md
controller/certora/spec/: boundary_rules.rs  compat.rs  emode_rules.rs  flash_loan_rules.rs  health_rules.rs  index_rules.rs  interest_rules.rs  isolation_rules.rs  liquidation_rules.rs  math_rules.rs  mod.rs  model.rs  oracle_rules.rs  position_rules.rs  solvency_rules.rs  strategy_rules.rs
controller/confs/: boundary.conf  emode.conf  flash_loan.conf  health.conf  indexes.conf  interest.conf  isolation.conf  liquidation-light.conf  liquidation.conf  math.conf  oracle.conf  positions.conf  solvency.conf  strategy.conf
controller/src/: access.rs  config.rs  flash_loan.rs  lib.rs  router.rs  strategy.rs  tests.rs  utils.rs  validation.rs  views.rs
controller/src/cache/: mod.rs
controller/src/cross_contract/: mod.rs  pool.rs  sac.rs
controller/src/helpers/: mod.rs  testutils.rs
controller/src/oracle/: compose.rs  mod.rs  observation.rs  policy.rs  price.rs  reflector.rs  tolerance.rs  validation.rs
controller/src/positions/: account.rs  borrow.rs  dust.rs  emode.rs  liquidation.rs  mod.rs  repay.rs  supply.rs  update.rs  withdraw.rs
controller/src/storage/: account.rs  certora.rs  debt.rs  emode.rs  instance.rs  market.rs  (+5 more)
fuzz/: Cargo.toml  HETZNER.md  README.md  coverage.sh
fuzz/.cargo/: config.toml
fuzz/fuzz_targets/: compound_monotonic.rs  flow_cache_atomicity.rs  flow_e2e.rs  flow_flash_loan.rs  flow_isolation_emode_xor.rs  flow_multi_op.rs  flow_oracle_tolerance.rs  flow_strategy.rs  flow_supply_borrow_liquidate.rs  flow_supply_borrow_tsan_smoke.rs  fp_div_by_int.rs  fp_math.rs  fp_mul_div.rs  fp_ops.rs  fp_rescale.rs  pool_native.rs  rates_and_index.rs  rates_borrow.rs
fuzz/src/: lib.rs
interfaces/governance/: Cargo.toml
pool/: Cargo.toml
pool/src/: cache.rs  interest.rs  lib.rs  test_support.rs  utils.rs  views.rs
services/keeper/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.example.yaml
services/lending-exporter/: Cargo.toml  Dockerfile  README.md  docker-compose.example.yaml
test-harness/: Cargo.toml
test-harness/src/: admin.rs  assert.rs  auth.rs  context.rs  flash_loan.rs  helpers.rs  lib.rs  liquidation.rs  market.rs  mock_aggregator.rs  mock_reflector.rs  presets.rs  revenue.rs  strategy.rs  time.rs  user.rs  view.rs
test-harness/tests/: account_tests.rs  admin_config_tests.rs  bad_debt_index_tests.rs  bench_liquidate_max_positions.rs  borrow_tests.rs  chaos_simulation_tests.rs  decimal_diversity_tests.rs  emode_tests.rs  events_tests.rs  flash_loan_tests.rs  fuzz_auth_matrix.proptest-regressions  fuzz_auth_matrix.rs  fuzz_budget_metering.rs  fuzz_cache_atomicity.proptest-regressions  fuzz_cache_atomicity.rs  fuzz_conservation.rs  fuzz_isolation_emode_xor.proptest-regressions  fuzz_isolation_emode_xor.rs  fuzz_liquidation_differential.rs  fuzz_multi_asset_solvency.proptest-regressions  fuzz_multi_asset_solvency.rs  fuzz_oracle_tolerance.proptest-regressions  fuzz_oracle_tolerance.rs  fuzz_strategy_flashloan.rs  fuzz_supply_borrow_liquidate.proptest-regressions  fuzz_supply_borrow_liquidate.rs  fuzz_ttl_keepalive.rs  interest_rigorous_tests.rs  interest_tests.rs  invariant_tests.rs  isolation_tests.rs  keeper_admin_tests.rs  keeper_tests.rs  lifecycle_regression_tests.rs  liquidation_coverage_tests.rs  liquidation_math_tests.rs  liquidation_mixed_decimal_tests.rs  liquidation_tests.rs  math_rates_tests.rs  oracle_tolerance_tests.rs  (+18 more)
verification/test-harness/: Cargo.toml  README.md
(+1245 files in other folders)
