[workspace]
members = [
    "common",
    "interfaces/pool",
    "interfaces/controller",
    "interfaces/governance",
    "contracts/pool",
    "contracts/controller",
    "contracts/governance",
    "contracts/aggregator",
    "contracts/defindex-strategy",
    "contracts/flash-loan-receiver",
    "contracts/mock-oracle",
    "contracts/mock-redstone",
    "tests/test-harness",
]
exclude = ["tests/fuzz", "vendor"]
resolver = "2"

[workspace.dependencies]
# Pinned for deterministic audited artifacts. OpenZeppelin crates come
# from crates.io (0.7.2 targets soroban-sdk 26.1); no local vendoring.
soroban-sdk = "=26.1.0"
stellar-access = "=0.7.2"
stellar-contract-utils = "=0.7.2"
stellar-governance = "=0.7.2"
stellar-macros = "=0.7.2"

# Certora formal verification (only compiled with `certora` feature).
# Certora dependencies compile with the local patches below.
cvlr = { git = "https://github.com/Certora/cvlr.git", default-features = false }
cvlr-soroban = { git = "https://github.com/Certora/cvlr-soroban.git", rev = "5ff9d010e2d322c2291697c07e850759f850f245" }
cvlr-soroban-macros = { git = "https://github.com/Certora/cvlr-soroban.git", rev = "5ff9d010e2d322c2291697c07e850759f850f245" }
cvlr-soroban-derive = { git = "https://github.com/Certora/cvlr-soroban.git", rev = "5ff9d010e2d322c2291697c07e850759f850f245" }


# Vendored cvlr adds #![no_std] to cvlr-spec.
# wasm32v1-none builds with soroban-sdk 26.x require this patch.
[patch."https://github.com/Certora/cvlr.git"]
cvlr = { path = "vendor/cvlr/cvlr" }
cvlr-asserts = { path = "vendor/cvlr/cvlr-asserts" }
cvlr-early-panic = { path = "vendor/cvlr/cvlr-early-panic" }
cvlr-log = { path = "vendor/cvlr/cvlr-log" }
cvlr-nondet = { path = "vendor/cvlr/cvlr-nondet" }
cvlr-decimal = { path = "vendor/cvlr/cvlr-decimal" }
cvlr-derive = { path = "vendor/cvlr/cvlr-derive" }
cvlr-fixed = { path = "vendor/cvlr/cvlr-fixed" }
cvlr-macros = { path = "vendor/cvlr/cvlr-macros" }
cvlr-spec = { path = "vendor/cvlr/cvlr-spec" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = "fat"
