[workspace]
members = [
    "common",
    "interfaces/pool",
    "interfaces/controller",
    "interfaces/governance",
    "interfaces/price-aggregator",
    "contracts/pool",
    "contracts/controller",
    "contracts/governance",
    "contracts/swap-aggregator",
    "contracts/defindex-strategy",
    "contracts/flash-loan-receiver",
    "contracts/xoxno-oracle",
    "contracts/price-aggregator",
    "mock/mock-oracle",
    "mock/mock-redstone",
    "tests/test-harness",
]
exclude = ["tests/fuzz", "vendor"]
resolver = "2"

[workspace.dependencies]
# Pinned for deterministic audited artifacts. OpenZeppelin crates come
# from crates.io (0.7.2 targets soroban-sdk 26.1); no local vendoring.
soroban-sdk = "=26.1.0"
stellar-access = "=0.7.2"
stellar-contract-utils = "=0.7.2"
stellar-governance = "=0.7.2"
stellar-macros = "=0.7.2"

# Certora formal verification (only compiled with `certora` feature).
# Certora dependencies compile with the local patches below.
cvlr = { git = "https://github.com/Certora/cvlr.git", rev = "b8bfb4c9587ad1e6576a74506fb1ae1a7006cd1b", default-features = false }
cvlr-soroban = { git = "https://github.com/Certora/cvlr-soroban.git", rev = "5ff9d010e2d322c2291697c07e850759f850f245" }
cvlr-soroban-macros = { git = "https://github.com/Certora/cvlr-soroban.git", rev = "5ff9d010e2d322c2291697c07e850759f850f245" }
cvlr-soroban-derive = { git = "https://github.com/Certora/cvlr-soroban.git", rev = "5ff9d010e2d322c2291697c07e850759f850f245" }

# The pinned rev already carries the `#![no_std]` cvlr-spec fix. Only `cvlr-log`
# still needs a local patch: upstream expands `cvlr_rule_location!` to
# `std::file!()`, which is unresolved in our `#![no_std]` wasm32v1-none
# contracts. Remove this once the `::core::file!()` fix lands upstream.
[patch."https://github.com/Certora/cvlr.git"]
cvlr-log = { path = "vendor/cvlr-log" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = "fat"
