[package]
name = "stellar-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Isolate from parent workspace at repo root.
[workspace]

[features]
# Default does NOT pull in serde/sha2 — fuzz targets don't need them.
# Enable `seed-corpus` only when building the `seed_corpus` host-side binary.
default = []
seed-corpus = ["dep:serde", "dep:serde_json", "dep:sha2"]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
soroban-sdk = { version = "25.3.1", features = ["testutils"] }
common = { path = "../common" }
controller = { path = "../controller", features = ["testing"] }
pool = { path = "../pool" }
test-harness = { path = "../test-harness", features = ["testing"] }

# Optional: only compiled when `seed-corpus` feature is enabled.
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }

# NOTE: contract-level (Env-based) libFuzzer targets require
# `--sanitizer=thread` on macOS (aarch64) — the default libFuzzer sancov
# build fails to link the `stellar-access` cdylib variant. TSAN avoids the
# cdylib path. See fuzz/README.md.

[lib]
path = "src/lib.rs"

[[bin]]
name = "fp_mul_div"
path = "fuzz_targets/fp_mul_div.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fp_rescale"
path = "fuzz_targets/fp_rescale.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fp_div_by_int"
path = "fuzz_targets/fp_div_by_int.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rates_borrow"
path = "fuzz_targets/rates_borrow.rs"
test = false
doc = false
bench = false

[[bin]]
name = "compound_monotonic"
path = "fuzz_targets/compound_monotonic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flow_supply_borrow_liquidate"
path = "fuzz_targets/flow_supply_borrow_liquidate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flow_flash_loan"
path = "fuzz_targets/flow_flash_loan.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flow_oracle_tolerance"
path = "fuzz_targets/flow_oracle_tolerance.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flow_multi_op"
path = "fuzz_targets/flow_multi_op.rs"
test = false
doc = false
bench = false

## Host-side binary: seed libFuzzer corpora from `*/test_snapshots/**/*.json`.
## NOT a fuzz target. Build with: `cargo run --bin seed_corpus --features seed-corpus`.
[[bin]]
name = "seed_corpus"
path = "src/bin/seed_corpus.rs"
test = false
doc = false
bench = false
required-features = ["seed-corpus"]

[profile.release]
debug = 1
