[package]
name = "governance"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-access = { workspace = true }
stellar-contract-utils = { workspace = true }
stellar-governance = { workspace = true }
stellar-macros = { workspace = true }
common = { path = "../../common" }
controller-interface = { path = "../../interfaces/controller" }
governance-interface = { path = "../../interfaces/governance" }

[features]
testing = []

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
controller = { path = "../controller", features = ["testing"] }
