[package]
name = "price-aggregator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-access = { workspace = true }
stellar-macros = { workspace = true }
common = { path = "../../common" }

[features]
testing = []
certora = []

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
mock-oracle = { path = "../../mock/mock-oracle" }
mock-redstone = { path = "../../mock/mock-redstone" }
