[package]
name = "governance-interface"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { workspace = true }
common = { path = "../../common" }
controller-interface = { path = "../../interfaces/controller" }
stellar-governance = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
