[workspace]
members = ["."]
resolver = "2"

[package]
name = "keeper-bot"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Off-chain TTL keepalive + index-refresh service for the XOXNO Lending Soroban protocol."

[[bin]]
name = "keeper-bot"
path = "src/main.rs"

[lib]
name = "keeper_bot"
path = "src/lib.rs"

[dependencies]
# --- Async runtime, errors, logging ---
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"

# --- Config + serde ---
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "env"] }

# --- Stellar / Soroban (SDF official stack, protocol 26) ---
stellar-rpc-client = "=26.0.0"
stellar-xdr = { version = "=26.0.1", features = ["curr", "std", "base64", "serde"] }
stellar-strkey = "0.0.16"

# --- Cryptography for the signer ---
ed25519-dalek = { version = "2", features = ["rand_core"] }
bip39 = { version = "2.2", features = ["std"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# --- Azure Key Vault (private XOXNO crate; needs a git build secret in Docker) ---
# Lives on the `production` branch of XOXNO/mx-chain-rust at crates/mx-keyvault.
# Pin `rev` to a known-good commit once we cut a release tag — branch tracking
# can move under our feet otherwise.
mx-keyvault = { git = "https://github.com/XOXNO/mx-chain-rust", branch = "production", default-features = false, features = ["keyvault"] }

# --- HTTP for /health + /metrics ---
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
hyper = { version = "1", features = ["server", "http1"] }
prometheus = { version = "0.13", default-features = false }

# --- Numeric helpers ---
num-bigint = "0.4"

[dev-dependencies]
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "test-util"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = 0
panic = "abort"
