[package]
name = "test-harness"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = ["reference-math"]
reference-math = ["dep:num-rational", "dep:num-bigint", "dep:num-traits"]
testing = ["controller/testing", "governance/testing"]

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
common = { path = "../../common" }
controller = { path = "../../contracts/controller", features = ["testing"] }
governance = { path = "../../contracts/governance", features = ["testing"] }
governance-interface = { path = "../../interfaces/governance" }
pool = { path = "../../contracts/pool" }
flash-loan-receiver = { path = "../../contracts/flash-loan-receiver" }
# Exact rational arithmetic for the reference implementation used by the
# liquidation differential fuzz harness (Phase B). Pulled in as a regular
# dependency because `src/reference/` is part of the library, not a test-only
# module (so it's also exercised by `cargo test --lib`).
num-rational = { version = "0.4", default-features = false, features = ["std", "num-bigint-std"], optional = true }
num-bigint = { version = "0.4", default-features = false, features = ["std"], optional = true }
num-traits = { version = "0.2", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
# Property-based testing for contract-level fuzz scenarios.
# See tests/fuzz/ and `make proptest`. Configure run size via PROPTEST_CASES.
proptest = "1"
